[package]
edition = "2021"
name = "mcbstm32"
version = "0.1.0"
authors = ["Lukasz Ponski <lponski@yahoo.com>"]
resolver = "2"

[[bin]]
name = "mcbstm32"
test = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embedded-sdmmc = { version = "0.8.0" }
#embedded-sdmmc = { version = "0.8.0", default-features = false, features = [
#	"defmt-log",
#] }
ssd1306 = "0.9.0"
embedded-graphics = "0.8.1"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = "2.1"

embassy-stm32 = { version = "0.2.0", features = [
	"defmt",
	"stm32f103rb",
	"unstable-pac",
	"memory-x",
	"time-driver-any",
] }
embassy-executor = { version = "0.7", features = [
	"task-arena-size-8192",
	"arch-cortex-m",
	"executor-thread",
	"defmt",
	"executor-interrupt",
] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [
	"defmt",
	"defmt-timestamp-uptime",
] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
